Fixes a margin problem in the radio's return button on mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -357,13 +357,13 @@ body button:focus {
 }
 .rádio .rádio__voltar {
   position: fixed;
-  margin-top: 350px;
-  margin-left: 360px;
+  margin-top: 380px;
+  margin-left: 1070px;
 }
 .rádio .rádio__voltar .rádio__voltar--botão {
   color: ivory;
   border: none;
-  font-size: 30px;
+  font-size: 25px;
   background: none;
   cursor: pointer;
 }
@@ -373,11 +373,18 @@ body button:focus {
     position: unset;
   }
   .rádio .rádio__vídeo {
-    position: fixed;
     left: unset;
     z-index: -1;
     bottom: 100px;
     width: 1450px;
+  }
+  .rádio .rádio__voltar {
+    margin-top: 350px;
+    margin-left: 360px;
+  }
+  .rádio .rádio__voltar .rádio__voltar--botão {
+    font-size: 30px;
+    cursor: pointer;
   }
 }
 @media only screen and (min-width: 1400px) {
